<resources>

    <string name="app_name">Dope</string>
    <string name="free_and_open_source">Free and Open Source</string>
    <string name="version_code">Version 1.0</string>
    <string name="copy_right_text">&#169; 2015-2016 Dope Flashcard All Right Reserved</string>


    <!-- menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- drawer -->

    <string name="menu_home">home</string>
    <string name="menu_about">About</string>
    <string name="menu_favorite">Favorite</string>
    <string name="nav_category">Category</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_night_mode">Night mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_vote">Rate us</string>
    <string name="drawer_item_other">Other</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="nav_about">About</string>


    <!-- button -->
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="btn_go_to_app">Return to App</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_create_new_category">CREATE NEW CATEGORY</string>
    <string name="btn_create_new_deck">CREATE NEW DECK</string>
    <string name="btn_create_new_flashcard">CREATE NEW FLASHCARD</string>


    <!--titles -->
    <string name="title_delete">Delete</string>
    <string name="title_exception">Exception</string>

    <!--Messages-->
    <string name="msg_are_you_sure_to_delete_category">Are you sure to delete this Category?</string>
    <string name="msg_are_you_sure_to_delete_deck">Are you sure to delete this Deck?</string>
    <string name="msg_are_you_sure_to_delete_flashcard">Are you sure to delete this FlashCard?</string>
    <!--Toast-->
    <string name="msg_your_language_not_supported_please_install">کاربر گرامی زبان دستیار صوتی شما میبایست انگلیسی باشد لطفا آنرا نصب کنید و دوباره امتحان کنید</string>
    <string name="msg_please_install_google_voice">کاربر گرامی برای استفاده از این سرویس میبایست دستیار صوتی گوگل را نصب کنید</string>


    <!-- hint-->
    <string name="hint_category_name">Category name</string>
    <string name="hint_category_subtitle">Category subtitle</string>
    <string name="hint_deck_name">Deck name</string>
    <string name="hint_deck_subtitle">Deck subtitle</string>
    <string name="hint_flashcard_title">Flashcard name</string>
    <string name="hint_flashcard_subtitle">Flashcard subtitle</string>
    <string name="hint_flashcard_word">Word</string>
    <string name="hint_flashcard_persian">Persian</string>
    <string name="hint_flashcard_synonym">Synonym</string>
    <string name="hint_flashcard_pronunciation">Pronunciation</string>
    <string name="hint_flashcard_example1">Example 1</string>
    <string name="hint_flashcard_example2">Example 2</string>
    <string name="hint_flashcard_example3">Example 3</string>

    <string name="hint_new_category_name">New Category Name</string>
    <string name="hint_new_deck_name">New Deck Name</string>
    <string name="hint_new_flashcard_name">New Flashcard Name</string>


    <!-- contact me fragment -->
    <string name="contact_me">Contact me :</string>
    <string name="email_to_me">hadifar.amir@gmail.com</string>
    <string name="tell_a_friend">Tell a friend :</string>
    <string name="share_me">Share me !</string>

    <string name="share_on_socials">Dope is FlashCard App , It\'s specially design for student ( in all grades and all majors )\n You can create as much as flashcard you want \n It\'s Free</string>

    <string name="more_feature_in_next_version">
        Next Version Feature :\n- More Books\n- More Customize ability ( font , color &#8230;)\n
    </string>
    <string name="msg_error_happened_exception">Some error Happened. Would you like to launch app again?</string>


    <!--Settings items-->
    <string name="setting_settings">Settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_support">Support</string>
    <string name="setting_animation">Animation</string>
    <string name="setting_open_source_licenses">Open source licenses</string>
    <string name="setting_license_details">Licenses details for open source software</string>
    <string name="title_settings">Settings</string>
    <string name="title_language">Language</string>
    <string name="title_animation">Animation</string>
    <string name="title_open_source_licenses">Open source licenses</string>
    <string name="title_licenses_details">Licenses details for open source software</string>
    <string name="title_support">Support</string>
    <string name="title_title">title</string>
    <string name="hint_enter_note">Add some note</string>
    <string name="title_time">Time</string>
    <string name="title_duration">Duration</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="action_save">Save</string>
    <string name="msg_error_title_can_not_be_empty">Title can\'t be empty</string>
    <string name="nav_reminder">Reminder</string>
    <string name="msg_delete_reminder">Do you want to delete reminder?</string>
    <string name="action_abort">abort</string>
    <string name="action_yes">Yes</string>
    <string name="title_reminder_time_is_passed">Wrong timing</string>
    <string name="msg_reminder_time_is_passed">Time you set is passed try to set time from future.</string>
    <string name="title_new_reminder">New Reminder</string>


    <array name="list_licence_title">
        <item>Copyright 2013 Square, Inc.</item>
        <item>Copyright 2013 Jake Wharton</item>
        <item>Copyright 2004 Android</item>
        <item>Copyright 200x OrmLite</item>

    </array>

    <array name="list_licence_description">
        <item>Licensed under the Apache License, Version 2.0 (the "License")</item>
        <item>Licensed under the Apache License, Version 2.0 (the "License")</item>
        <item>Licensed under the Apache License, Version 2.0 (the "License")</item>
        <item>ISC License</item>
    </array>


</resources>
