<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/material_global_margin_16"
        android:paddingLeft="@dimen/material_global_margin_16"
        android:paddingRight="@dimen/material_global_margin_16"
        android:paddingTop="@dimen/material_global_margin_32">


        <EditText
            android:id="@+id/flashcardWord"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_word"
            android:inputType="text" />

        <EditText
            android:id="@+id/flashcardPronunciation"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_pronunciation" />

        <EditText
            android:id="@+id/flashcardPersian"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_persian" />

        <EditText
            android:id="@+id/flashcardSynonym"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_synonym" />

        <EditText
            android:id="@+id/flashcardEx1"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_example1" />

        <EditText
            android:id="@+id/flashcardEx2"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_example2" />

        <EditText
            android:id="@+id/flashcardEx3"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_flashcard_example3" />

        <Button
            android:id="@+id/fab_add_new_flashcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_global_margin_16"
            android:background="@drawable/default_button"
            android:text="@string/create_new_flashcard"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>