<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Textview.Gray.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_title" />

            <EditText
                android:id="@+id/reminder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_note"
                android:textSize="16sp" />

            <TextView
                style="@style/Textview.Gray.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_time" />

            <EditText
                android:id="@+id/reminder_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableRight="@drawable/ic_arrow_down"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="16sp"
                tools:text="@string/hint_enter_note" />

            <TextView
                style="@style/Textview.Gray.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_duration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/Textview.Gray.MediumSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/hint_from" />

                <EditText
                    android:id="@+id/reminder_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:drawableRight="@drawable/ic_arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="16sp" />

                <TextView
                    style="@style/Textview.Gray.MediumSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/hint_to" />

                <EditText
                    android:id="@+id/reminder_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:drawableRight="@drawable/ic_arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="16sp"
                    tools:text="@string/hint_enter_note" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>