<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/material_global_padding_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_background"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_word"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_word"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_pronunciation"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_pronunciation" />

            <EditText
                android:id="@+id/et_translate"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_persian" />

            <EditText
                android:id="@+id/et_synonym"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_synonym" />

            <!-- should be replace with list-->
            <!--<EditText
                android:id="@+id/et_ex"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_example1" />

            <EditText
                android:id="@+id/flashcardEx2"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_example2" />

            <EditText
                android:id="@+id/flashcardEx3"
                style="@style/EditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_flashcard_example3" />-->

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_global_margin_16">

            <LinearLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_dialog_left"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="64dp"
                    android:textColor="@color/color_accent"
                    android:textSize="@dimen/material_text_size_16" />


                <Button
                    android:id="@+id/btn_dialog_right"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="64dp"
                    android:textColor="@color/color_accent"
                    android:textSize="@dimen/material_text_size_16" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_dialog_create"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>